<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="auto_login"
        android:summary="@string/auto_login_desc"
        android:title="@string/auto_login" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="NFC"
        android:summary="@string/NFC_summary"
        android:title="@string/enable_NFC" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="gesture"
        android:summary="@string/gesture_summary"
        android:title="@string/enable_gestures" />

    <EditTextPreference
        android:defaultValue="I was there :)"
        android:dialogIcon="@drawable/edit_text"
        android:dialogTitle="message"
        android:key="message"
        android:negativeButtonText="Cancel"
        android:positiveButtonText="Ok"
        android:summary="@string/default_message_desc"
        android:title="@string/default_message" />
    
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="GPSWarning"
        android:summary="@string/GPSWarning_desc"
        android:title="@string/GPSWaning" />

</PreferenceScreen>